Forcing the creation of the systray containment even if plasma is not mutable

This requires the latest master of plasma-framework (as of a minute ago)

BUG:360265

Reviewed-by: mart